--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Interactive rating component</title>
+    <title>Rating System Design | Maddy</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
