--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1 class="heading">How did we do?</h1>
           <div class="note">
             Please let us know how we did with your support request. All
-            feedback is appreciated to help us improve.
+            feedback is appreciated to help us improve our offering!
           </div>
           <div class="rating-button-container">
             <button class="rating-button" onclick="selectRatings(id)" id="1">
